<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EllakQuiz</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- MainMenu strings-->
    <string name="menu_title">Quiz Γνώσεων\nΕΛ/ΛΑΚ</string>
    <string name="mainmenu_button_newgame_s">Νέο Παιχνίδι (απλό)</string>
    <string name="mainmenu_button_newgame_t">Νέο Παιχνίδι (με χρόνο)</string>
    <string name="mainmenu_button_load">Φόρτωση Παιχνιδιού</string>
    <string name="mainmenu_button_stats">Στατιστικά</string>
    <string name="mainmenu_button_logout">Αποσύνδεση</string>
    <string name="hint_user_name">όνομα χρήστη</string>
    <string name="hint_email">email</string>
    <string name="hint_password">κωδικός χρήστη</string>
    <string name="login">Σύνδεση</string>
    <string name="register">Εγγραφή</string>
    <string name="error_invalid_password">Λάθος όνομα_χρήστη/κωδικός</string>
    <string name="error_field_required">Υποχρεωτικό πεδίο</string>
    <string name="hint_re_password">επιβεβαίωση κωδικού χρήστη</string>
    <string name="register_title">Εγγραφή Χρήστη</string>
    <string name="register_description">Δημιουργήστε το λογαριασμό σας,\nγια να βελτιώνετε το σκόρ σας από παντού!!!</string>
    <string name="option_menu_all_categ">Ερωτήσεις από\n όλες τις κατηγορίες</string>
    <string name="option_menu_select_category">Επιλογή \nκατηγορίας</string>
    <string name="category_select">Επιλογή Κατηγορίας</string>
    <string name="category1">Κατηγορία 1</string>
    <string name="category2">Κατηγορία 2</string>
    <string name="go_to_menu">Επιστροφή στο Μενού</string>
    <string name="congrats">Συγχαρητήρια!!!</string>
    <string name="score_label">Score:</string>
    <string name="score_field">score_field</string>
    <string name="pause_button">pause_button</string>
    <string name="question_space">question</string>
    <string name="continue_btn">Συνέχισε</string>
    <string name="save_btn">Αποθήκευση και\n έξοδος</string>
    <string name="quit_btn">Έξοδος στο Μενού</string>
    <string name="pause">Pause</string>
    <string name="example_timer">00</string>


</resources>
