<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:background="#ff000000"
    android:id="@+id/pause_layout">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_btn"
        android:id="@+id/btn_continue"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:clickable="true"
        android:layout_marginTop="131dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/btn_quit"
        android:layout_alignStart="@+id/btn_quit"
        android:layout_alignRight="@+id/btn_save"
        android:layout_alignEnd="@+id/btn_save" />

    <Button
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:text="@string/save_btn"
        android:id="@+id/btn_save"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:enabled="true"
        android:layout_below="@+id/btn_continue"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_btn"
        android:id="@+id/btn_quit"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:enabled="true"
        android:layout_below="@+id/btn_save"
        android:layout_alignLeft="@+id/btn_save"
        android:layout_alignStart="@+id/btn_save"
        android:layout_alignRight="@+id/btn_save"
        android:layout_alignEnd="@+id/btn_save" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pause"
        android:id="@+id/textView7"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff" />
</RelativeLayout>