<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameCategoryActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/mainmenu_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal|top"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/category_select"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal|top"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="309dp"
        android:id="@+id/mainmenu_buttons">
    <Button
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:text="@string/category1"
        android:id="@+id/button"
        android:layout_alignRight="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="20dp" />



    <Button
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:text="@string/category2"
        android:id="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:textSize="20dp" />


    </LinearLayout>
    </LinearLayout>

</RelativeLayout>
