<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_vertical|center_horizontal"
              tools:context="com.ellak.ellakquiz.ui.activity.GreetActivity">

    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

    <TextView
        android:layout_gravity="center_horizontal|top"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/menu_title"
        android:id="@+id/textView3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Πόσο καλά γνωρίζετε\n το Ελεύθερο Λογισμικό;"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp" />

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_name"
        android:editable="true"
        android:singleLine="true" />

    <EditText
            android:id="@+id/passkey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:editable="true" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="register"
                android:text="@string/register"
            android:clickable="true"
                android:enabled="true" android:textColor="#ff000000"
                android:layout_weight="1" />

            <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="login"
                    android:text="@string/login"
                android:clickable="true"
                    android:enabled="true" android:textColor="#ff000000"
                android:layout_weight="1" />


        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>