<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameCategoryActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/mainmenu_content"
        android:weightSum="1">

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/imageButton"
            android:layout_gravity="right"
            android:background="@mipmap/pause"
            android:contentDescription="@string/pause_button" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question_space"
        android:id="@+id/question"
        android:layout_gravity="center_horizontal|top"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="51dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/category_sub"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="234dp"
        android:id="@+id/mainmenu_buttons"
        android:baselineAligned="false"
        android:layout_weight="0.33">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_weight="1">

            <Button
                android:layout_width="239dp"
                android:layout_height="match_parent"
                android:text="@string/category1"
                android:id="@+id/ans1"
                android:layout_alignRight="@+id/button7"
                android:layout_alignEnd="@+id/button7"
                android:layout_alignLeft="@+id/button7"
                android:layout_alignStart="@+id/button7"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="15dp"
                android:background="#ffb9b9b9"
                android:layout_margin="2dp" />

            <Button
                android:layout_width="239dp"
                android:layout_height="match_parent"
                android:text="@string/category2"
                android:id="@+id/ans2"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="15dp"
                android:background="#ffb9b9b9"
                android:layout_margin="2dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            android:layout_weight="1">

            <Button
                android:layout_width="239dp"
                android:layout_height="match_parent"
                android:text="@string/category1"
                android:id="@+id/ans3"
                android:layout_alignRight="@+id/button9"
                android:layout_alignEnd="@+id/button9"
                android:layout_alignLeft="@+id/button9"
                android:layout_alignStart="@+id/button9"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="15dp"
                android:background="#ffb9b9b9"
                android:layout_margin="2dp" />

            <Button
                android:layout_width="239dp"
                android:layout_height="match_parent"
                android:text="@string/category2"
                android:id="@+id/ans4"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textSize="15dp"
                android:background="#ffb9b9b9"
                android:layout_margin="2dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/example_timer"
                android:id="@+id/timeView"
                android:textSize="30sp"
                android:gravity="center_horizontal" />

        </LinearLayout>


    </LinearLayout>
    </LinearLayout>

</RelativeLayout>
